--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,32 @@ body {
   top: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
-  background-color: #fbfffe;
+  background-color: #a5acc0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(1vmin + 20px) ;
   color: rgb(49, 78, 131);
+}
+
+div.radar{
+  padding: 20px;
+  border-radius: 20px;
+  background-color: white;
+  position: relative ;
+  width: 700px;
+  height: 700px;
+}
+
+div.info{
+  padding: 20px;
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  top: 12%;
+  left: -25%;
+  transform: translate(-50%, 50%);
+  width: 280px;
+  height: 100px;
 }
