--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,55 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -10%);
+  position: relative;
+  margin: 0 auto;
+  text-align: center;
   background-color: #a5acc0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(1vmin + 20px) ;
+  max-width: 1000px;
+  font-size: calc(1vmin + 15px) ;
   color: rgb(49, 78, 131);
+  padding-bottom: 40px;
 }
 
 div.radar{
-  padding: 20px;
+  margin-top: 10px;
+  padding-left: 2%;
+  padding-right: 2%;
   border-radius: 20px;
   background-color: white;
-  position: relative ;
-  width: 700px;
-  height: 700px;
+  font-size: 40px ;
+  min-width: 500px;
+  max-height: 800px;
+  box-shadow: 0px 10px 5px rgba(77,77,77,0.7);
 }
 
-div.info{
+div{
+  margin-top: 2px;
+}
+
+.landing-page div{
+  border-radius: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: white;
+  color: rgb(49, 78, 131);
+  width: 1000px;
+}
+
+span{
+  font-size: medium;
+}
+
+.submitButton{
+  margin-top: 20px;
   padding: 20px;
   border-radius: 20px;
-  background-color: white;
-  position: absolute;
-  top: 12%;
-  left: -25%;
-  transform: translate(-50%, 50%);
-  width: 280px;
-  height: 100px;
+  background-color: rgb(52, 54, 179);
+  color: white;
+  align-items: center;
 }
